# GHC

./: .gitignore  CMakeLists.txt  CMakeSettings.json  main.cpp  stats.txt
Boro/: SlideShow.java
Mine/: Photo.java  Slide.java  TentoRok.java
Pizza/: Pizza.py
Pizza/src/: Pizza.java
Practice/: More.sln
Practice/More/: Main.cpp  More.h  More.vcxproj  More.vcxproj.filters
SlideShow/1/: readme
SlideShow/2/: a_example.out  d_pet_pictures.out  e_shiny_selfies.out
SlideShow/3/: b_lovely_landscapes.out
SlideShow/4/: c_memorable_moments.out  d_pet_pictures.out  e_shiny_selfies.out
SlideShow/5/: c_memorable_moments.out  d_pet_pictures.out  e_shiny_selfies.out
SlideShow/6/: c_memorable_moments.out
SlideShow/7/: b_lovely_landscapes.out  e_shiny_selfies.out
SlideShow/8/: b_lovely_landscapes.out  d_pet_pictures.out
SlideShow/mata/: a_example.txt  c_memorable_moments.txt
SlideShow/src/: Main.java  Photo.java  Slide.java  SlideShow.java
assets/resources/: DarkHiro.imageset  DarkHiro.looknfeel
assets/shaders/: api_definitions.glsl  api_frag.glsl  api_vert.glsl
assets/shaders/core/: faces.frag  faces.geom  faces.vert  frag_definitions.glsl  simple.vert
assets/shaders/include/: texturing.glsl
assets/shaders/renderers/: raster.frag
assets/shaders/system/: deferred_msaa.frag
include/COGS/: CMakeLists.txt  Frustum.h  Grid.h  Importer.h  Mesh.h  PointCloud.h  Scan.h
include/GEOM/: CMakeLists.txt
include/GLW/: ArrayObject.h  CMakeLists.txt  FrameBuffer.h  ShaderProgramList.h  Utils.h  Version.h  WindowEventObserver.h
include/GUIP/: CMakeLists.txt  GuiSystem.h
include/HIRO/: API.h  CMakeLists.txt  Camera.h  Gadget.h  HIRO.h  Version.h
include/HIRO/gui/: GuiHelpers.h
include/HIRO/modules/: CMakeLists.txt  PointCloudResource.h  TextureResource.h
include/HIRO_DRAW/: CMakeLists.txt  RenderSystem.h  Renderer.h  Scene.h  ShaderApi.h  TextRenderer.h  VisualCamera.h
include/Utils/: AtomicQueue.h  CMakeLists.txt  ConcurrentBinding.h  Config.h  EnumFlags.h  ExtGLM.h  ExtSTD.h  FileTypes.h  Filesystem.h  Functional.h  GeometryStructures.h  IniParser.h  KeylokLicenseChecker.h  Notifier.h  SpaceAndUnits.h  Statistics.h  StrongID.h  StrongType.h  Ulog.h  WxWidgetsDialog.h
src/: utils.cpp  utils.h
vs_solution/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  GHC_Project.sln  GHC_Project.vcxproj  GHC_Project.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
(+11 files in other folders)
